2-Challenge-2/sprint-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sprint-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/override-frontend-port: "80"
spec:
  rules:
  - host: {사용할 도메인 입력이 필요합니다.}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: {여기에 입력해주세요.}
            port:
              number: {입력이 필요해요.}
